--- a/src/Components/Eye/Eye.css
+++ b/src/Components/Eye/Eye.css
@@ -1,8 +1,9 @@
 .EyeContainer {
     margin-left: auto;
+    margin-right: 60px;
 }
 
 .EyeImg {
     width: auto;
-    height: 50px;
+    height: 55px;
 }
