--- a/src/Components/TerminalHeader/TerminalHeader.css
+++ b/src/Components/TerminalHeader/TerminalHeader.css
@@ -2,4 +2,6 @@
     display: flex;
     align-items: center;
     height: 100px;
+    font-family: Roboto, serif !important;
+    font-size: 17px !important;
 }
