--- a/src/Components/IndexPage/IndexHeader/SignIn/SignIn.css
+++ b/src/Components/IndexPage/IndexHeader/SignIn/SignIn.css
@@ -11,6 +11,8 @@
     background-color: #595959;
     border: none;
     border-radius: 5px;
+    position: relative;
+    right: 170px;
 }
 
 .signIn:hover {
