basic auth flow is done

--- a/src/Components/TraderOptionsPage/TraderOptionsMain/OptionBlock/OptionBlock.css
+++ b/src/Components/TraderOptionsPage/TraderOptionsMain/OptionBlock/OptionBlock.css
@@ -4,7 +4,7 @@
     align-items: center;
     font-family: 'Roboto', sans-serif;
     color: white;
-    height: 75%;
+    height: 70vh;
     width: 350px;
     background-color: #2E2E2E;
     border-color: #666666;
