added account page + refactoring

--- a/src/Components/PagesComponents/IndexPage/BackgroundImg/BackgroundImg.css
+++ b/src/Components/PagesComponents/IndexPage/BackgroundImg/BackgroundImg.css
@@ -1,5 +1,5 @@
 .BackgroundImg {
-    background-image: url("../../../assets/IndexPage/stoncksIndex.png");
+    background-image: url("../../../../assets/IndexPage/stoncksIndex.png");
     background-size: cover;
     opacity: 0.25;
     width: 100%;
