added background to applcation according to feedback

--- a/src/Components/PagesComponents/SignUpPage/SignUpMain/SIgnUpForm/SignUpForm.css
+++ b/src/Components/PagesComponents/SignUpPage/SignUpMain/SIgnUpForm/SignUpForm.css
@@ -4,6 +4,7 @@
     width: 380px;
     border-radius: 10px;
     background-color: #2E2E2E;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .SignUpForm {
