--- a/src/Components/PagesComponents/AdminPage/AdminMain/StatSection/StatBlock/StatBlock.css
+++ b/src/Components/PagesComponents/AdminPage/AdminMain/StatSection/StatBlock/StatBlock.css
@@ -1,8 +1,8 @@
 .StatBlockComponent {
     display: flex;
     flex-direction: column;
-    width: 270px;
-    height: 115px;
+    width: 25%;
+    height: 50%;
     background: #3A3A3A;
     border-radius: 20px;
 }
