--- a/src/Components/PagesComponents/AccountPage/AccountMain/AccountMain.css
+++ b/src/Components/PagesComponents/AccountPage/AccountMain/AccountMain.css
@@ -39,7 +39,7 @@
 }
 
 .PersonalInformationBlocks {
-    margin-top: 80px;
+    margin-top: 1%;
     width: 70%;
     display: grid;
     grid-template-columns: 1fr 1fr;
